added a div class

--- a/html/index.html
+++ b/html/index.html
@@ -9,5 +9,8 @@
 <body>
     <!--This is for an example-->
     <h1>Mark Meritt was here</h1>
+    <div class="profile">
+        
+    </div>
 </body>
 </html>
