--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,10 @@
     <!--This is for an example-->
     <h1>Mark Meritt was here</h1>
     <div class="profile">
-        
+        </div class="profilePicture">
+        <!-- added an image from usplash-->
+        <img src="https://images.unsplash.com/photo-1611272762580-37eddb4aabc2?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="my profile">
+        </div>
     </div>
 </body>
 </html>
