added a new div for banner

--- a/html/index.html
+++ b/html/index.html
@@ -15,5 +15,13 @@
         <img src="https://images.unsplash.com/photo-1611272762580-37eddb4aabc2?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="my profile">
         </div>
     </div>
+    <div class="cover">
+        <!--added a new div for cover picture-->
+    </div class="coverPicture">
+    <!-- added an image from usplash-->
+    <img src="https://images.unsplash.com/photo-1705037197182-4d8197173080?q=80&w=2460&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="my banner">
+    </div>
+    </div>
 </body>
 </html>
