--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--This is for an example-->
-    <h1>Mark Meritt was here</h1>
+    <h1>Profile Card Template</h1>
     <div class="profile">
         </div class="profilePicture">
         <!-- added an image from usplash-->
