--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,12 @@
         <img src="https://images.unsplash.com/photo-1705037197182-4d8197173080?q=80&w=2460&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="my banner">
     </div> 
+    <div class="content">
+        <!--Added a paragraph-->
+    <p><h1>This example</h1> 
+        Shows how to create a simple profile card
+    </p>
+    </div>
 </div>
 </body>
 </html>
