--- a/html/index.html
+++ b/html/index.html
@@ -3,29 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile Card Template</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--This is for an example-->
-    <h1>Profile Card Template</h1>
-<div class="profile">
-    <div class="profilePicture">
-        <!-- added an image from usplash-->
-        <img src="https://images.unsplash.com/photo-1611272762580-37eddb4aabc2?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="my profile">
+    <header>
+        <h1>Profile Card Template</h1>
+    </header>
+    <div class="profile">
+        <div class="profilePicture">
+            <img src="https://images.unsplash.com/photo-1611272762580-37eddb4aabc2?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="My Profile" width="400" height="600">
+        </div>
+
+        <div class="coverPicture">
+            <img src="https://images.unsplash.com/photo-1705037197182-4d8197173080?q=80&w=2460&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="My Banner" width="600" height="700">
+        </div> 
+
+        <div class="content">
+            <h2>This example</h2>
+            <p>Shows how to create a simple profile card.</p>
+        </div>
     </div>
-        <!--added a new div for cover picture-->
-    <div class="coverPicture">
-        <!-- added an image from usplash-->
-        <img src="https://images.unsplash.com/photo-1705037197182-4d8197173080?q=80&w=2460&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="my banner">
-    </div> 
-    <div class="content">
-        <!--Added a paragraph-->
-    <p><h1>This example</h1> 
-        Shows how to create a simple profile card
-    </p>
-    </div>
-</div>
+
 </body>
 </html>
