Header links added

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
+        <div class="header-content">
+            <div class="pages">
         <h1>Profile Card Template</h1>
+        <nav>
+            <ul>
+                <li><a href="#profile">Profile</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <div class="profile">
         <div class="profilePicture">
