--- a/html/index.html
+++ b/html/index.html
@@ -25,9 +25,9 @@
             <img src="https://images.unsplash.com/photo-1611272762580-37eddb4aabc2?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="My Profile" width="400" height="600">
         </div>
         <div class="content">
-            <h2>IT Administrator</h2>
+            <h2>IT Administrator at TIS industry</h2>
             <p> My Name is Paul Allen, I have Bsc in Information systems Management <br>
-            and a Masters degree in Network Computing with six years experience in the IT industry.</p>
+            and a Masters degree in Network Computing from Sheridan with six years experience in the IT industry.</p>
         </div>
     </div>
 
