java scrpit linked

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Card Template</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="script" href="script.js">
 </head>
 <body>
     <header>
@@ -19,12 +20,12 @@
             </ul>
         </nav>
     </header>
-    <div class="profile">
+    <div class="profile" id="profile">
         <div class="profilePicture">
             <h1>Allen Paul</h1>
             <img src="https://images.unsplash.com/photo-1611272762580-37eddb4aabc2?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="My Profile" width="400" height="600">
         </div>
-        <div class="content">
+        <div class="content-content">
             <h2>IT Administrator at TIS industry</h2>
             <p> My Name is Paul Allen, I have Bsc in Information systems Management <br>
             and a Masters degree in Network Computing from Sheridan with six years experience in the IT industry.</p>
